--- a/Client/src/main/resources/com/textme/client/massages-stylesheet.css
+++ b/Client/src/main/resources/com/textme/client/massages-stylesheet.css
@@ -46,7 +46,6 @@
     -fx-font-size: 14;
     -fx-padding: 10;
     -fx-background-radius: 20px;
-
 }
 
 .bubble:incoming {
@@ -61,6 +60,7 @@
 
 #textPane {
     -fx-background-color: #DADADA;
+    -fx-hbar-policy: never;
 }
 
 #messagesBox {
@@ -68,3 +68,68 @@
     -fx-spacing: 10px;
 }
 
+.scroll-bar:horizontal .track,
+.scroll-bar:vertical .track{
+    -fx-background-color :transparent;
+    -fx-border-color :transparent;
+    -fx-background-radius : 0.0em;
+    -fx-border-radius :1.0em;
+}
+
+
+.scroll-bar:horizontal .increment-button ,
+.scroll-bar:horizontal .decrement-button {
+    -fx-background-color :transparent;
+    -fx-background-radius : 0.0em;
+    -fx-padding :0.0 0.0 10.0 0.0;
+
+}
+
+.scroll-bar:vertical .increment-button ,
+.scroll-bar:vertical .decrement-button {
+    -fx-background-color :transparent;
+    -fx-background-radius : 0.0em;
+    -fx-padding :0.0 10.0 0.0 0.0;
+
+}
+
+.scroll-bar .increment-arrow,
+.scroll-bar .decrement-arrow{
+    -fx-shape : " ";
+    -fx-padding :0.15em 0.0;
+}
+
+.scroll-bar:vertical .increment-arrow,
+.scroll-bar:vertical .decrement-arrow{
+    -fx-shape : " ";
+    -fx-padding :0.0 0.15em;
+}
+
+.scroll-bar:horizontal .thumb,
+.scroll-bar:vertical .thumb {
+    -fx-background-color :derive(black,90.0%);
+    -fx-background-insets : 1.0, 0.0, 0.0;
+    -fx-background-radius : 1.0em;
+}
+
+.scroll-bar:horizontal .thumb:hover,
+.scroll-bar:vertical .thumb:hover {
+    -fx-background-color :derive(#4D4C4F,10.0%);
+    -fx-background-insets : 1.0, 0.0, 0.0;
+    -fx-background-radius : 1.0em;
+}
+
+#userNick {
+    -fx-font-family: Lucida Grande;
+    -fx-font-size: 14;
+    -fx-alignment: center;
+    -fx-background-color: #ffffff;
+    -fx-font-smoothing-type: lcd;
+    -fx-border-color: transparent transparent #84848b transparent;
+}
+
+.button {
+    -fx-background-color: #1A73E8;
+    -fx-text-fill: #ffffff;
+    -fx-font-size: 14;
+}
